# 42_archive

./: .gitignore
C/codexion/: .gitignore  Makefile  README.md  codexion.h  codexion_generic.c  codexion_log.c  codexion_main.c  codexion_parse_config.c  codexion_queues.c  codexion_setup.c  codexion_setup_impl.c  codexion_state.c  codexion_threads.c  codexion_threads_impl.c  explanations.md  ft_dongle_functions  ft_dongle_functions.c  ft_dongle_setup.c  ft_time_functions.c
C/push_swap/: Makefile  push_swap.c  push_swap_bench.c  push_swap_more_utils.c  push_swap_movement_push.c  push_swap_simple.c  push_swap_utils.c
C00/ex00/: ft_putchar.c
C00/ex01/: ft_print_alphabet.c
C00/ex04/: ft_is_negative.c
C01/ex00/: ft_ft.c
C01/ex04/: ft_ultimate_div_mod.c
RAG/: README.md  local-env.sh  test_cites.sh
get_next_line/: README.md  get_next_line.c
incepcion-docker compose/: .gitignore  DEV_DOC.md  Makefile  README.md  USER_DOC.md
libft/: Makefile
netpractice/: README.md  level1.json  level10.json  level2.json  level4.json  level5.json  level6.json  level7.json  level8.json  level9.json
push_swap/: README.md  push_swap.h  push_swap_adaptive.c  push_swap_lst.c  push_swap_medium.c  push_swap_movement_swap.c  push_swap_radix.c
python/RAG/: Makefile  pyproject.toml
python/RAG/documentacion/: 02 Chunk inicial de Markdown.odt  06 Primer ciclo completo.odt
python/RAG/src/: cli_execution.py  functions.py  tfidf.py
python/RAG/testing/: 01_test_markdown.py  02_test_markdown_2.py  04_test_TfidfRetriever 2.py  05_test_save_load_retriever.py  06_test_cicle_MD.py
(+223 files in other folders)
