[project]
name = "rag"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.13.4",
    "torch",
    "transformers",
    "accelerate",
    "safetensors",
    "scikit-learn",
    "fire",
    "joblib",
    "tqdm",
    "flake8>=7.3.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "types-tqdm>=4.67.3.20260518",
]
